# FileService

./: FileService.cabal  README.md
FileService/: FileService.cabal
FileService/src/: Console.hs  Database.hs  File.hs  Main.hs  State.hs  User.hs  Util.hs
src/: Database.hs  File.hs  Main.hs  State.hs  User.hs  Util.hs
