name: FileService
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
description:  
data-dir: ""
 
executable FileService
    build-depends: QuickCheck -any, acid-state -any, base -any,
                   bytestring -any, containers -any, mtl -any,
                   pwstore-purehaskell -any, safecopy -any, split -any, time -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: Console Database
 
test-suite test-FileService
    build-depends: QuickCheck -any, acid-state -any, base -any,
                   bytestring -any, containers -any, mtl -any,
                   pwstore-purehaskell -any, safecopy -any, split -any, time -any
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    hs-source-dirs: src